# Score-P

./: AUTHORS  CITATION.cff  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  OPEN_ISSUES  README.md  THANKS  aclocal.m4  configure  configure.ac
build-backend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-config/: REVISION  VERSION  downloads
build-config/common/: Makefile.inc.am  Makefile.tests-mpi-omp.inc.am  Makefile.tests-mpi.inc.am  Makefile.tests-omp.inc.am  Makefile.tests-serial.inc.am  Makefile.tests-shmem.inc.am  platforms.am
build-config/m4/: scorep_addr2line.m4  scorep_align.m4  scorep_check_preincludes.m4  scorep_check_symbols.m4  scorep_compiler_cond_and_subst.m4  scorep_compiler_constructor.m4  scorep_compiler_instrumentation_flags.m4  scorep_computenode_compilers.m4  scorep_cray_pmi.m4  scorep_cube4.m4  scorep_cuda.m4  scorep_dlfcn.m4  scorep_enable_default.m4  scorep_estimator.m4  scorep_fortran.m4  scorep_fortran_charlen_type.m4  scorep_gcc_plugin.m4  scorep_hip.m4  scorep_instrumentation_flags.m4  scorep_io_recording.m4  scorep_iquote_support.m4  scorep_kokkos.m4  scorep_ld_wrap_file.m4  scorep_libbfd.m4  scorep_library_wrapping.m4  scorep_link_flags.m4  scorep_lustre_api.m4  scorep_macos.m4  scorep_memory.m4  scorep_metrics.m4  scorep_mic.m4  scorep_mountinfo.m4  scorep_mpi.m4  scorep_mpi_profiling.m4  scorep_omp_ancestry.m4  scorep_omp_tpd.m4  scorep_ompt.m4  scorep_openacc.m4  scorep_opencl.m4  scorep_openmp.m4  (+11 more)
build-frontend/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-gcc-plugin/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-includes/: backend-only.am  common.am  computenode-mpi.m4  computenode-shmem.m4  computenode.m4  front-and-backend.am  frontend-only.am  loginnode.m4  mpi-backend-only.am  shmem-backend-only.am
build-libwrap/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-mpi/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  run_otf2_speed_test.sh.in
build-score/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
build-shmem/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
common/hash/: jenkins_hash.c  jenkins_hash.h
common/utils/: Makefile.inc.am
doc/: Makefile.inc.am
doc/doxygen-dev/: doxygen-dev.cfg.in
doc/doxygen-user/: doxygen-user.cfg.in  main_1.dox.in  main_10.dox.in  main_11.dox.in  main_12.dox.in  main_2.dox.in  main_3.dox.in  main_4.dox.in  main_5.dox.in  main_6.dox.in  main_7.dox.in  main_8.dox.in  main_9.dox.in  scorep_backend_info_help.dox.in  scorep_backend_info_usage.dox.in  scorep_config_usage.dox.in  scorep_info_confvars_help.md  scorep_info_ldaudit_help.md  scorep_score_usage.dox.in  scorep_usage.dox.in
doc/examples/: Makefile  Makefile.inc.am  hello_world.c  print_regions.c
doc/profile/: scorep_metrics.html
doc/tags/: scorep.tag
include/scorep/: Makefile.inc.am  SCOREP_Libwrap.h  SCOREP_PublicHandles.h  SCOREP_PublicTypes.h  SCOREP_SubstrateEvents.h  SCOREP_SubstratePlugins.h  SCOREP_Tau.h  SCOREP_User.h  SCOREP_User.inc  SCOREP_User_Functions.h  SCOREP_User_Types.h
share/: SCOREP_Pdt_Instrumentation.conf  scorep.errors  scorep.spec.in  wrap.in
share/bg-gnu/: README  platform-backend-user-provided  platform-mpi-user-provided
src/: Makefile.inc.am  config-backend-for-frontend.h.in  config-backend-mpi.h.in  config-backend-shmem.h.in  config-backend.h.in  config-custom.h  config-frontend.h.in  config-gcc-plugin.h.in  config-libwrap.h.in  config-score.h.in  config.h
src/measurement/: Makefile.common.inc.am  Makefile.confvars.inc.am  Makefile.inc.am  Makefile.mpi.inc.am  Makefile.shmem.inc.am  SCOREP_Config.c  SCOREP_Events.c  SCOREP_Libwrap.c  SCOREP_Memory.c  SCOREP_RuntimeManagement.c  SCOREP_Task.c  SCOREP_Topologies.c  scorep_clock_synchronization.c  scorep_clock_synchronization.h  scorep_constructor.c  scorep_definition_cube4.c  scorep_definition_cube4.h  scorep_environment.c  scorep_environment.h  scorep_error_callback.c  scorep_events_common.h  scorep_ipc.h  scorep_libwrap_management.h  scorep_location_management.c  scorep_location_management.h  scorep_mpp.h  scorep_paradigms_management.c  scorep_paradigms_management.h  scorep_properties_management.c  scorep_properties_management.h  scorep_runtime_management.c  scorep_runtime_management.h  scorep_runtime_management_timings.c  scorep_runtime_management_timings.h  scorep_status.c  scorep_status.h  scorep_subsystem_management.c  scorep_subsystem_management.h  scorep_system_tree.c  scorep_system_tree.h  (+12 more)
src/utils/: Makefile.inc.am
test/: Makefile.inc.am  Makefile.mpi.inc.am  hello_functions.c  scorep_monolithic_subsystems.c
test/alignment/: Makefile.inc.am  alignment_test_c.c  alignment_test_f.F90
test/constructor_checks/: Makefile.inc.am  constructor.c  constructor_check.F90  constructor_check.c  generate_makefile.sh.in  run_constructor_checks.sh.in
test/fasthashtab/: Makefile.inc.am  fasthashtab_monotonic_table.c  fasthashtab_monotonic_table.h  fasthashtab_monotonic_test.c  fasthashtab_non_monotonic_table.c  fasthashtab_non_monotonic_table.h  fasthashtab_non_monotonic_test.c
test/filtering/: Makefile.inc.am  compiler_filter_test.cpp  compiler_filter_test_main.cpp  filter.cfg  filter_f.cfg  filter_test.F90  filter_test.c  filtered_file.c  not_filtered.c  run_compiler_filter_test.sh.in  run_filter_f_test.sh.in  run_filter_test.sh.in
test/hashtab/: Makefile.inc.am  hashtab_test.c
test/instrumenter_checks/: Makefile.common_rules  Makefile.common_rules_base  Makefile.inc.am  Makefile.instrument_configurations.in  check-instrumentation.sh.in  instrumenter-configurations.sh.in
test/io/: Makefile.mpi.inc.am
test/io_management/: Makefile.inc.am  handle_test.c  scorep_io_mgmt_subsystems.c
test/ipc/: Makefile.shmem.inc.am  test_ipc.c  test_ipc.h  test_ipc_shmem.c
test/jacobi/: Makefile.inc.am  Makefile.mpi.inc.am
test/libwrap/: Makefile.inc.am  foo.c  foo.h  scorep_libwrap_macros_test.c  wrapper.c
test/measurement/: Makefile.inc.am  definitions_test.c  self_contained_scorep_config.c  (+9 more)
(+1129 files in other folders)
